--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 black==20.8b1
 flask==1.1.2
-grpcio==1.33.1
-grpcio-tools==1.33.1
+Flask-GraphQL==2.0.1
+graphene==2.1.8
+grpcio==1.33.2
+grpcio-tools==1.33.2
